feat: implement phase 2 authentication screen redesign - Redesigned Auth.fxml with a 50/50 split-panel layout. - Added specific Phase 2 styling to fintech-light.css (auth-left, right,   form fields). - Implemented form validation logic in AuthController. - Added visual error feedback (red borders) for empty credential fields.